GladiusUnity2021/ModelImporter/Assets/Scripts/ANTLRgenerated/AttackSkillParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from AttackSkill.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class AttackSkillParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66, 
		T__66=67, T__67=68, T__68=69, T__69=70, T__70=71, T__71=72, T__72=73, 
		T__73=74, T__74=75, T__75=76, T__76=77, T__77=78, T__78=79, T__79=80, 
		T__80=81, T__81=82, ID=83, WS=84, FLOAT=85, OBR=86, CBR=87, COMMA=88, 
		STRING=89, SINGLELINE_COMMENT=90;
	public const int
		RULE_root = 0, RULE_numEntries = 1, RULE_create = 2, RULE_skillProperty = 3, 
		RULE_animBlock = 4, RULE_fxBlock = 5, RULE_effectBlock = 6, RULE_statusBlock = 7, 
		RULE_projectileBlock = 8, RULE_createDef = 9, RULE_useClass = 10, RULE_displayNameId = 11, 
		RULE_descriptionId = 12, RULE_level = 13, RULE_jobPointCost = 14, RULE_prereq = 15, 
		RULE_attribute = 16, RULE_costs = 17, RULE_shiftData = 18, RULE_affCost = 19, 
		RULE_effect = 20, RULE_effectFX = 21, RULE_splitEffect = 22, RULE_splitEffectCondition = 23, 
		RULE_effectSkillCond = 24, RULE_combatMods = 25, RULE_moveToAttackMod = 26, 
		RULE_affinity = 27, RULE_range = 28, RULE_excludeRange = 29, RULE_meter = 30, 
		RULE_anim = 31, RULE_loopAnim = 32, RULE_moveAnim = 33, RULE_defendAnim = 34, 
		RULE_lowAnim = 35, RULE_chargeAnim = 36, RULE_animTime = 37, RULE_animStartFrame = 38, 
		RULE_fx = 39, RULE_fxSwing = 40, RULE_fxCTAG = 41, RULE_fxProjectile = 42, 
		RULE_projectile = 43, RULE_projectileSequence = 44, RULE_projectileRotation = 45, 
		RULE_projectileAttr = 46, RULE_status = 47, RULE_statusDuration = 48, 
		RULE_statusTarget = 49, RULE_statusSituationAffinityCondition = 50, RULE_statusChance = 51, 
		RULE_effectStatusCond = 52, RULE_statusInterval = 53, RULE_statusCondition = 54, 
		RULE_skillStatusSituationUnitCondition = 55, RULE_skillStatusSituationStatusCondition = 56, 
		RULE_animSpeed = 57, RULE_targetCondition = 58, RULE_effectRange = 59, 
		RULE_effectCondition = 60, RULE_subSkill = 61, RULE_proxy = 62, RULE_weaponReq = 63, 
		RULE_comboButton = 64, RULE_fxProjectileImpact = 65, RULE_sound = 66, 
		RULE_skillFree = 67, RULE_multiHitData = 68, RULE_usabilityCondition = 69, 
		RULE_summonData = 70, RULE_moveRange = 71, RULE_moveRangeCondition = 72, 
		RULE_replaces = 73, RULE_statusSituationSkillCondition = 74, RULE_fxMove = 75, 
		RULE_distanceDelay = 76, RULE_statusUseLimit = 77;
	public static readonly string[] ruleNames = {
		"root", "numEntries", "create", "skillProperty", "animBlock", "fxBlock", 
		"effectBlock", "statusBlock", "projectileBlock", "createDef", "useClass", 
		"displayNameId", "descriptionId", "level", "jobPointCost", "prereq", "attribute", 
		"costs", "shiftData", "affCost", "effect", "effectFX", "splitEffect", 
		"splitEffectCondition", "effectSkillCond", "combatMods", "moveToAttackMod", 
		"affinity", "range", "excludeRange", "meter", "anim", "loopAnim", "moveAnim", 
		"defendAnim", "lowAnim", "chargeAnim", "animTime", "animStartFrame", "fx", 
		"fxSwing", "fxCTAG", "fxProjectile", "projectile", "projectileSequence", 
		"projectileRotation", "projectileAttr", "status", "statusDuration", "statusTarget", 
		"statusSituationAffinityCondition", "statusChance", "effectStatusCond", 
		"statusInterval", "statusCondition", "skillStatusSituationUnitCondition", 
		"skillStatusSituationStatusCondition", "animSpeed", "targetCondition", 
		"effectRange", "effectCondition", "subSkill", "proxy", "weaponReq", "comboButton", 
		"fxProjectileImpact", "sound", "skillFree", "multiHitData", "usabilityCondition", 
		"summonData", "moveRange", "moveRangeCondition", "replaces", "statusSituationSkillCondition", 
		"fxMove", "distanceDelay", "statusUseLimit"
	};

	private static readonly string[] _LiteralNames = {
		null, "'NUMENTRIES:'", "'SKILLCREATE:'", "'SKILLUSECLASS:'", "'SKILLDISPLAYNAMEID:'", 
		"'SKILLDESCRIPTIONID:'", "'SKILLLEVEL:'", "'SKILLJOBPOINTCOST:'", "'SKILLPREREQ:'", 
		"'SKILLATTRIBUTE:'", "'SKILLCOSTS:'", "'SKILLSHIFTDATA:'", "'SKILLAFFCOST:'", 
		"'SKILLEFFECT:'", "'SKILLEFFECTFX:'", "'SKILLSPLITEFFECT:'", "'SKILLSPLITEFFECTCONDITION:'", 
		"'SKILLEFFECTSKILLCOND:'", "'SKILLCOMBATMODS:'", "'SKILLMOVETOATTACKMOD:'", 
		"'SKILLAFFINITY:'", "'SKILLRANGE:'", "'SKILLEXCLUDERANGE:'", "'SKILLMETER:'", 
		"'SKILLANIM:'", "'SKILLLOOPANIM:'", "'SKILLMOVEANIM:'", "'SKILLDEFENDHANIM:'", 
		"'SKILLLOWANIM:'", "'SKILLCHARGEANIM:'", "'SKILLANIMTIME:'", "'SKILLANIMSTARTFRAME:'", 
		"'SKILLFX:'", "'SKILLFXSWING:'", "'SKILLFXCTAG:'", "'SKILLFXPROJECTILE:'", 
		"'SKILLPROJECTILE:'", "'SKILLPROJECTILESEQUENCE:'", "'SKILLPROJECTILEROTATION:'", 
		"'SKILLPROJECTILEATTR:'", "'SKILLSTATUS:'", "'SKILLSTATUS2:'", "'SKILLSTATUSDURATION:'", 
		"'SKILLSTATUSDURATION2:'", "'SKILLSTATUSTARGET:'", "'SKILLSTATUSTARGET2:'", 
		"'SKILLSTATUSSITUATIONAFFINITYCONDITION:'", "'SKILLSTATUSSITUATIONAFFINITYCONDITION2:'", 
		"'SKILLSTATUSCHANCE:'", "'SKILLSTATUSCHANCE2:'", "'SKILLEFFECTSTATUSCOND:'", 
		"'SKILLSTATUSINTERVAL:'", "'SKILLSTATUSINTERVAL2:'", "'SKILLSTATUSCONDITION:'", 
		"'SKILLSTATUSCONDITION2:'", "'SKILLSTATUSSITUATIONUNITCONDITION:'", "'SKILLSTATUSSITUATIONUNITCONDITION2:'", 
		"'SKILLSTATUSSITUATIONSTATUSCONDITION:'", "'SKILLSTATUSSITUATIONSTATUSCONDITION2:'", 
		"'SKILLANIMSPEED:'", "'SKILLTARGETCONDITION:'", "'SKILLEFFECTRANGE:'", 
		"'SKILLEFFECTCONDITION:'", "'SKILLSUBSKILL:'", "'SKILLPROXY:'", "'SKILLWEAPONREQ:'", 
		"'SKILLCOMBOBUTTON:'", "'SKILLFXPROJECTILEIMPACT:'", "'SKILLSOUND:'", 
		"'SKILLFREE1:'", "'SKILLFREE2:'", "'SKILLFREE3:'", "'SKILLFREE4:'", "'SKILLMULTIHITDATA:'", 
		"'SKILLUSABILITYCONDITION:'", "'SKILLSUMMONDATA:'", "'SKILLMOVERANGE:'", 
		"'SKILLMOVERANGECONDITION:'", "'SKILLREPLACES:'", "'SKILLSTATUSSITUATIONSKILLCONDITION:'", 
		"'SKILLFXMOVE:'", "'SKILLDISTANCEDELAY:'", "'SKILLSTATUSUSELIMIT:'", null, 
		null, null, "'{'", "'}'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, "ID", 
		"WS", "FLOAT", "OBR", "CBR", "COMMA", "STRING", "SINGLELINE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AttackSkill.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static AttackSkillParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AttackSkillParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AttackSkillParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class RootContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumEntriesContext numEntries() {
			return GetRuleContext<NumEntriesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CreateContext[] create() {
			return GetRuleContexts<CreateContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CreateContext create(int i) {
			return GetRuleContext<CreateContext>(i);
		}
		public RootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_root; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.EnterRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.ExitRoot(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAttackSkillVisitor<TResult> typedVisitor = visitor as IAttackSkillVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RootContext root() {
		RootContext _localctx = new RootContext(Context, State);
		EnterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156;
			numEntries();
			State = 158;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 157;
				create();
				}
				}
				State = 160;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==T__1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumEntriesContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FLOAT() { return GetToken(AttackSkillParser.FLOAT, 0); }
		public NumEntriesContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_numEntries; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.EnterNumEntries(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.ExitNumEntries(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAttackSkillVisitor<TResult> typedVisitor = visitor as IAttackSkillVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumEntries(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumEntriesContext numEntries() {
		NumEntriesContext _localctx = new NumEntriesContext(Context, State);
		EnterRule(_localctx, 2, RULE_numEntries);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 162;
			Match(T__0);
			State = 163;
			Match(FLOAT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CreateDefContext createDef() {
			return GetRuleContext<CreateDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkillPropertyContext[] skillProperty() {
			return GetRuleContexts<SkillPropertyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkillPropertyContext skillProperty(int i) {
			return GetRuleContext<SkillPropertyContext>(i);
		}
		public CreateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_create; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.EnterCreate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IAttackSkillListener typedListener = listener as IAttackSkillListener;
			if (typedListener != null) typedListener.ExitCreate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IAttackSkillVisitor<TResult> typedVisitor = visitor as IAttackSkillVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCreate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CreateContext create() {
		CreateContext _localctx = new CreateContext(Context, State);
		EnterRule(_localctx, 4, RULE_create);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 165;
			createDef();
			State = 167;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 166;
				skillProperty();
				}
				}
				State = 169;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__14) | (1L << T__15) | (1L << T__16) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__23) | (1L << T__24) | (1L << T__25) | (1L << T__26) | (1L << T__27) | (1L << T__28) | (1L << T__29) | (1L << T__30) | (1L << T__31) | (1L << T__32) | (1L << T__33) | (1L << T__34) | (1L << T__35) | (1L << T__36) | (1L << T__37) | (1L << T__38) | (1L << T__39) | (1L << T__40) | (1L << T__41) | (1L << T__42) | (1L << T__43) | (1L << T__44) | (1L << T__45) | (1L << T__46) | (1L << T__47) | (1L << T__48) | (1L << T__49) | (1L << T__50) | (1L << T__51) | (1L << T__52) | (1L << T__53) | (1L << T__54) | (1L << T__55) | (1L << T__56) | (1L << T__57) | (1L << T__58) | (1L << T__59) | (1L << T__60) | (1L << T__61) | (1L << T__62))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (T__63 - 64)) | (1L << (T__64 - 64)) | (1L << (T__65 - 64)) | (1L << (T__66 - 64)) | (1L << (T__67 - 64)) | (1L << (T__68 - 64)) | (1L << (T__69 - 64)) | (1L << (T__70 - 64)) | (1L << (T__71 - 64)) | (1L << (T__72 - 64)) | (1L << (T__73 - 64)) | (1L << (T__74 - 64)) | (1L << (T__75 - 64)) | (1L << (T__76 - 64)) | (1L << (T__77 - 64)) | (1L << (T__78 - 64)) | (1L << (T__79 - 64)) | (1L << (T__80 - 64)) | (1L << (T__81 - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SkillPropertyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UseClassContext useClass() {
			return GetRuleContext<UseClassContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AttributeContext attribute() {
			return GetRuleContext<AttributeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CombatModsContext combatMods() {
			return GetRuleContext<CombatModsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveToAttackModContext moveToAttackMod() {
			return GetRuleContext<MoveToAttackModContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AffinityContext affinity() {
			return GetRuleContext<AffinityContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public RangeContext range() {
			return GetRuleContext<RangeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UsabilityConditionContext usabilityCondition() {
			return GetRuleContext<UsabilityConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExcludeRangeContext excludeRange() {
			return GetRuleContext<ExcludeRangeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MultiHitDataContext multiHitData() {
			return GetRuleContext<MultiHitDataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TargetConditionContext targetCondition() {
			return GetRuleContext<TargetConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveRangeContext moveRange() {
			return GetRuleContext<MoveRangeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveRangeConditionContext moveRangeCondition() {
			return GetRuleContext<MoveRangeConditionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SummonDataContext summonData() {
			return GetRuleContext<SummonDataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProxyContext proxy() {
			return GetRuleContext<ProxyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SubSkillContext subSkill() {
			return GetRuleContext<SubSkillContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MeterContext meter() {
			return GetRuleContext<MeterContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ComboButtonContext comboButton() {
			return GetRuleContext<ComboButtonContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnimSpeedContext animSpeed() {
			return GetRuleContext<AnimSpeedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AnimBlockContext animBlock() {
			return GetRuleContext<AnimBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FxBlockContext fxBlock() {
			return GetRuleContext<FxBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DistanceDelayContext distanceDelay() {
			return GetRuleContext<DistanceDelayContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EffectBlockContext effectBlock() {
			return GetRuleContext<EffectBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProjectileBlockContext projectileBlock() {
			return GetRuleContext<ProjectileBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatusBlockContext statusBlock() {
			return GetRuleContext<StatusBlockContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ShiftDataContext shiftData() {
			return GetRuleContext<ShiftDataContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SkillFreeContext skillFree() {
			return GetRuleContext<SkillFreeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CostsContext costs() {
			return GetRuleContext<CostsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AffCostContext affCost() {
			return GetRuleContext<AffCostContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrereqContext prereq() {
			return GetRuleContext<PrereqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public JobPointCostContext jobPointCost() {
			return GetRuleContext<JobPointCostContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LevelContext level() {
			return GetRuleContext<LevelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DescriptionIdContext descriptionId() {
			return GetRuleContext<DescriptionIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DisplayNameIdContext displayNameId() {
			return GetRuleContext<DisplayNameIdContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public WeaponReqContext weaponReq() {
			return GetRuleContext<WeaponReqContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReplacesContext replaces() {
			return GetRuleContext<ReplacesContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatusUseLimitContext statusUseLimit() {
			return GetRuleContext<StatusUseLimitContext>(0);
		}
		public SkillPropertyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
